# Newton-sim

./: .gitignore  README.md  pyproject.toml
scripts/: build_vlm_prompt_dataset.py  evaluate_vlm_dataset.py  evaluate_vlm_dataset_colab.py  generate_pendulum_sweep.py  generate_ramp_cup_sweep.py  generate_robotic_pour_sweep.py  genesis_speed_benchmark.py  genesis_water_at_rest.py  make_eval_artifacts.py  prepare_and_upload_hf_dataset.py  prepare_viscosity_calibration_demo.py  render_ramp_tower_video.py  run_ramp_cup_water_genesis.py  run_ramp_tower.py  run_robotic_arm_pour_genesis.py  run_robotic_arm_pour_medium_genesis.py  run_robotic_arm_pour_target_genesis.py  run_robotic_arm_pour_viscosity_genesis.py  run_sweeps.sh
src/npm_sim/: __init__.py  pendulum_genesis.py  rigid_ramp_cup.py  rigid_ramp_cup_water_genesis.py  roboarm_wall.py  robotic_arm_pour_genesis.py
src/npm_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: gemini_test.py  test_rigid_ramp_cup_smoke.py  test_rigid_ramp_cup_water_genesis_smoke.py  test_roboarm_wall_smoke.py  test_robotic_arm_pour_genesis_smoke.py  validate_one_variable_sweep.py  video_diffusion.ipynb
