[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "npm-sim"
version = "0.1.0"
description = "Minimal Newton rigid-body ramp and tower demo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "newton[examples]>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
